add block 3 page

--- a/teaching/720401-B3-1-2568.html
+++ b/teaching/720401-B3-1-2568.html
@@ -483,13 +483,17 @@
                         <span class="section-icon">🎯</span>
                         <h2 class="section-title">ผลลัพธ์การเรียนรู้ (CLOs)</h2>
                     </div>
-                    <p>ผลลัพธ์การเรียนรู้จะได้รับการกำหนดในภายหลัง</p>
+                    <div class="section-details" style="padding-bottom: 2rem;">
+                        <p>ผลลัพธ์การเรียนรู้จะได้รับการกำหนดในภายหลัง</p>
+                    </div>
 
                     <div class="section-header">
                         <span class="section-icon">🧩</span>
                         <h2 class="section-title">การแมป CLO-PLO</h2>
                     </div>
-                    <p>การแมปผลลัพธ์การเรียนรู้จะได้รับการจัดเตรียมในภายหลัง</p>
+                    <div class="section-details" style="padding-bottom: 2rem;">
+                        <p>ผลลัพธ์การเรียนรู้จะได้รับการกำหนดในภายหลัง</p>
+                    </div>
                 </section>
 
                 <!-- Assessment Section -->
@@ -514,10 +518,15 @@
                     </div>
                     <div class="schedule-item">
                         <strong>ครั้งที่ 1 (23 พฤศจิกายน)</strong>
-                        <p><span style="text-decoration: line-through;">แนวคิดพื้นฐานการวิเคราะห์เชิงปริมาณเพื่อการตัดสินใจเชิงธุรกิจ,</span> กำหนดการเชิงเส้น (Linear Programming) Part 1 (การเขียนโมเดล และการแก้ปัญหาด้วยรูปภาพ)</p>
                         <ul>
-                            <li>Note: <a href="../assets/handout/Quantitative_Analysis_250803.pdf">download</a></li>
+                            <li>แนะนำรายวิชา และกฏเกณฑ์ปฏิบัติ</li>
+                            <li>แนะแนวเนื้อหาส่วนทฤษฎีที่เกี่ยวข้องเพื่อให้นำไปศึกษาด้วยตัวเองเพิ่มเติมได้</li>
+                            <li>วิธีการใช้ generative AI (ChatGPT / Gemini) เพื่อการค้นหาความรู้ด้วยตัวเองจากแหล่งข้อมูลต่าง ๆ</li>
+                            <li>การใช้ Excel พื้นฐานสำหรับการวิเคราะห์ข้อมูล</li>
                         </ul>
+                        <!-- <ul>
+                            <li>Note: <a href="../assets/handout/Quantitative_Analysis_250803.pdf">download</a></li>
+                        </ul> -->
                     </div>
     
                     <!-- <div class="schedule-item">
