add block 3 page

--- a/teaching/720401-B3-1-2568.html
+++ b/teaching/720401-B3-1-2568.html
@@ -521,7 +521,7 @@
                         <ul>
                             <li>แนะนำรายวิชา และกฏเกณฑ์ปฏิบัติ</li>
                             <li>แนะแนวเนื้อหาส่วนทฤษฎีที่เกี่ยวข้องเพื่อให้นำไปศึกษาด้วยตัวเองเพิ่มเติมได้</li>
-                            <li>วิธีการใช้ generative AI (ChatGPT / Gemini) เพื่อการค้นหาความรู้ด้วยตัวเองจากแหล่งข้อมูลต่าง ๆ</li>
+                            <li>วิธีการใช้ generative AI (ChatGPT / Gemini / NotebookLM) เพื่อการค้นหาความรู้ด้วยตัวเองจากแหล่งข้อมูลต่าง ๆ</li>
                             <li>การใช้ Excel พื้นฐานสำหรับการวิเคราะห์ข้อมูล</li>
                         </ul>
                         <!-- <ul>
