add block 3 page

--- a/teaching/720401-B3-1-2568.html
+++ b/teaching/720401-B3-1-2568.html
@@ -516,6 +516,7 @@
                         <span class="section-icon">📅</span>
                         <h2 class="section-title">ตารางสอน</h2>
                     </div>
+
                     <div class="schedule-item">
                         <strong>ครั้งที่ 1 (23 พฤศจิกายน)</strong>
                         <ul>
@@ -527,6 +528,27 @@
                         <!-- <ul>
                             <li>Note: <a href="../assets/handout/Quantitative_Analysis_250803.pdf">download</a></li>
                         </ul> -->
+                    </div>
+
+                    <div class="schedule-item">
+                        <strong>ครั้งที่ 2 (30 พฤศจิกายน)</strong>
+                        <ul>
+                            <li>...</li>
+                        </ul>
+                    </div>
+
+                    <div class="schedule-item">
+                        <strong>ครั้งที่ 3 (7 ธันวาคม)</strong>
+                        <ul>
+                            <li>...</li>
+                        </ul>
+                    </div>
+
+                    <div class="schedule-item">
+                        <strong>ครั้งที่ 4 (14 ธันวาคม)</strong>
+                        <ul>
+                            <li>...</li>
+                        </ul>
                     </div>
     
                     <!-- <div class="schedule-item">
