add block 3 page

--- a/teaching/720401-B3-1-2568.html
+++ b/teaching/720401-B3-1-2568.html
@@ -533,21 +533,25 @@
                     <div class="schedule-item">
                         <strong>ครั้งที่ 2 (30 พฤศจิกายน)</strong>
                         <ul>
-                            <li>...</li>
+                            <li>การใช้ Excel เพื่อการ query ข้อมูลขั้นสูง</li>
+                            <li>การใช้ Excel เพื่อสร้างกราฟและการวิเคราะห์ข้อมูล</li>
+                            <li>สรปุสิ่งที่จะออกสอบ</li>
                         </ul>
                     </div>
 
                     <div class="schedule-item">
                         <strong>ครั้งที่ 3 (7 ธันวาคม)</strong>
                         <ul>
-                            <li>...</li>
+                            <li>การใช้ Excel เพื่อการทำ dashboard</li>
+                            <li>การใช้ Google Data Studio เพื่อการทำ dashboard</li>
                         </ul>
                     </div>
 
                     <div class="schedule-item">
                         <strong>ครั้งที่ 4 (14 ธันวาคม)</strong>
                         <ul>
-                            <li>...</li>
+                            <li>การใช้ Google Data Studio เพื่อการทำ dashboard</li>
+                            <li>สรปุสิ่งที่จะออกสอบ</li>
                         </ul>
                     </div>
     
