--- a/teaching/720401-B3-1-2568.html
+++ b/teaching/720401-B3-1-2568.html
@@ -464,17 +464,31 @@
 
                 <!-- Materials Section -->
                 <section id="materials" class="content-section">
-                    <div class="section-header">
-                        <span class="section-icon">📄</span>
-                        <h2 class="section-title">เอกสารประกอบการสอน</h2>
+                    <div class="section-block">
+                        <div class="section-header">
+                            <span class="section-icon">📄</span>
+                            <h2 class="section-title">เอกสารประกอบการสอน</h2>
+                        </div>
+                        <ul class="styled-list">
+                            <li><a href="assets/720401-B3-1-2563/file/Worksheet 1-intro AI.docx" target="_blank">Worksheet 1-intro AI</a> </li>
+                            <li><a href="assets/720401-B3-1-2563/file/Worksheet 2-intro excel.xlsx" target="_blank">Worksheet 2-intro excel</a> </li>
+                            <li><a href="assets/720401-B3-1-2563/file/Worksheet 3-formula.xlsx" target="_blank">Worksheet 3-formula</a> </li>
+                        </ul>
                     </div>
-                    <ul class="styled-list">
-                        <li><a href="assets/textbook/720401-CH1-ระบบสารสนเทศและการจัดการในโลกยุคดิจิ.pdf" target="_blank">CH1-ระบบสารสนเทศและการจัดการในโลกยุคดิจิตอล</a> </li>
-                        <li><a href="assets/textbook/720401-CH2-ระบบสารสนเทศสำหรับองค์กร.pdf" target="_blank">CH2-ระบบสารสนเทศสำหรับองค์กร</a> </li>
-                        <li><a href="assets/textbook/720401-CH3-II-การเปลี่ยนข้อมูลให้เป็นสารสนเทศในเช.pdf" target="_blank">720401-CH3-การเปลี่ยนข้อมูลให้เป็นสารสนเทศในเชิงธุรกิจ</a> </li>
-                        <li><a href="assets/textbook/720401-CH4-Google Data Studio.pdf" target="_blank">720401-CH4-Google Data Studio</a> </li>
-                        <li><a href="assets/textbook/720401-CH5-โครงสร้างพื้นฐานและเทคโนโลยีใหม่.pdf" target="_blank">720401-CH5-โครงสร้างพื้นฐานและเทคโนโลยีใหม่</a> </li>
-                    </ul>
+                    
+                    <div class="section-block">
+                        <div class="section-header">
+                            <span class="section-icon">📄</span>
+                            <h2 class="section-title">หนังสือประกอบรายวิชา</h2>
+                        </div>
+                        <ul class="styled-list">
+                            <li><a href="assets/720401-B3-1-2563/textbook/720401-CH1-ระบบสารสนเทศและการจัดการในโลกยุคดิจิ.pdf" target="_blank">CH1-ระบบสารสนเทศและการจัดการในโลกยุคดิจิตอล</a> </li>
+                            <li><a href="assets/720401-B3-1-2563/textbook/720401-CH2-ระบบสารสนเทศสำหรับองค์กร.pdf" target="_blank">CH2-ระบบสารสนเทศสำหรับองค์กร</a> </li>
+                            <li><a href="assets/720401-B3-1-2563/textbook/720401-CH3-II-การเปลี่ยนข้อมูลให้เป็นสารสนเทศในเช.pdf" target="_blank">720401-CH3-การเปลี่ยนข้อมูลให้เป็นสารสนเทศในเชิงธุรกิจ</a> </li>
+                            <li><a href="assets/720401-B3-1-2563/textbook/720401-CH4-Google Data Studio.pdf" target="_blank">720401-CH4-Google Data Studio</a> </li>
+                            <li><a href="assets/720401-B3-1-2563/textbook/720401-CH5-โครงสร้างพื้นฐานและเทคโนโลยีใหม่.pdf" target="_blank">720401-CH5-โครงสร้างพื้นฐานและเทคโนโลยีใหม่</a> </li>
+                        </ul>
+                    </div>
                 </section>
 
                 <!-- CLOs Section -->
